# CExA-Experimental

./: .clang-format  .gitignore  .gitmodules  README.md  README.md.license
.github/workflows/: arch-info.yml  simd-backends.yml
archInfo/: CMakeLists.txt  README.md
archInfo/cmake/: CexaArchInfoConfig.cmake  CexaArchInfoConfig.cmake.in
archInfo/src/: CMakeLists.txt  cexa_ArchInfo.cpp  cexa_ArchInfo.hpp  cexa_compilInfo.hpp.in  cexa_macosArchInfo.cpp  cexa_macosArchInfo.hpp  cexa_unixArchInfo.cpp  cexa_unixArchInfo.hpp  cexa_windowsArchInfo.cpp  cexa_windowsArchInfo.hpp
archInfo/test/install_test/: CMakeLists.txt  main.cpp
archInfo/test/unit_test/: CMakeLists.txt  TestArchInfo.cpp
archInfo/unit_test/: CMakeLists.txt  TestArchInfo.cpp
cmake/modules/: CPM.cmake.license  FindKokkos.cmake
memInfo/: CMakeLists.txt  README.md
memInfo/src/: CMakeLists.txt  cexa_MemInfo.hpp  unixMemInfo.hpp
memInfo/unit_test/: CMakeLists.txt  TestMemInfo.cpp
scripts/: apply-clang-format
simd/: CMakeLists.txt  README.md
simd-backends/: CMakeLists.txt  README.md
simd-backends/cmake/: CexaSimdBackendsConfig.cmake.in  KokkosSimdBackendsConfig.cmake.in
simd-backends/src/: CEXA_SIMD_AOCLLIBM.hpp  CEXA_SIMD_Backends.hpp  CEXA_SIMD_Backends.hpp.in  CEXA_SIMD_SLEEF.hpp  CEXA_SIMD_SVML.hpp  CMakeLists.txt  Kokkos_SIMD_Backends.hpp  Kokkos_SIMD_SLEEF.hpp  Kokkos_SIMD_SVML.hpp
simd-backends/test/: CMakeLists.txt  accuracy.cpp
simd-backends/test/install_test/: CMakeLists.txt  main.cpp
simd/benchmarks/: CMakeLists.txt  SIMD_bench.cpp  SIMD_bench_accuracy.cpp  SIMD_bench_intrinsics.cpp  SIMD_bench_kokkos.cpp  SIMD_bench_kokkos_parallel.cpp
simd/src/: AVX2_Math.hpp  AVX512_Math.hpp  CMakeLists.txt  Constants.hpp  Kokkos_SIMD_AVX2_Math.hpp  Kokkos_SIMD_AVX512_Math.hpp  Kokkos_SIMD_AVX_Math.hpp
simd/unit_tests/: CMakeLists.txt  TestSIMD.cpp  UnitTestMain.cpp
simd/unit_tests/include/: SIMDTesting_Ops.hpp  SIMDTesting_Utilities.hpp  TestSIMD_MathOps  TestSIMD_MathOps.hpp  TestSIMD_MathOpsAccuracy.hpp
tuple/: .clang-tidy  CMakeLists.txt  README.md
tuple/include/impl/: apply.hpp  creation.hpp  helper.hpp  ignore.hpp  macros.hpp  traits.hpp  tuple.hpp
tuple/test/: CMakeLists.txt  README.md  main.cpp
tuple/test/support/: DefaultOnly.h  MoveOnly.h  archetypes.h  archetypes.ipp  cexa_integral_constant.hpp  cexa_test_macros.hpp  copy_move_types.h  propagate_value_category.hpp  test_allocator.h  test_convertible.h  type_id.h
tuple/test/tuple.apply/: CMakeLists.txt  apply.pass.cpp  apply_extended_types.pass.cpp  apply_large_arity.pass.cpp  make_from_tuple.pass.cpp
tuple/test/tuple.assign/: CMakeLists.txt  const_convert_copy.pass.cpp  const_convert_move.pass.cpp  const_copy.pass.cpp  const_move.pass.cpp  const_pair.pass.cpp  const_pair_copy.pass.cpp  const_pair_move.pass.cpp  convert_copy.pass.cpp  convert_move.pass.cpp  copy.pass.cpp  derived_from_tuple_like.pass.cpp  laziness.pass.cpp  move.pass.cpp  move_pair.pass.cpp
tuple/test/tuple.cnstr/: CMakeLists.txt  PR20855_tuple_ref_binding_diagnostics.pass.cpp  PR22806_constrain_tuple_like_ctor.pass.cpp  PR23256_constrain_UTypes_ctor.pass.cpp  PR27684_contains_ref_to_incomplete_type.pass.cpp  PR31384.pass.cpp  UTypes.pass.cpp  cnstr_with_any.compile.pass.cpp  const_Types.pass.cpp  const_move_pair.pass.cpp  const_pair.pass.cpp  convert_const_move.pass.cpp  convert_copy.pass.cpp  convert_move.pass.cpp  convert_non_const_copy.pass.cpp  copy.pass.cpp  deduct.pass.cpp  default.pass.cpp  dtor.pass.cpp  empty_tuple_trivial.compile.pass.cpp  move.pass.cpp  move_pair.pass.cpp  non_const_pair.pass.cpp  recursion_depth.pass.cpp  test_lazy_sfinae.pass.cpp
tuple/test/tuple.creation/: CMakeLists.txt  forward_as_tuple.pass.cpp  make_tuple.pass.cpp  tie.pass.cpp  tuple_cat.pass.cpp
tuple/test/tuple.elem/: CMakeLists.txt  get_const.pass.cpp  get_const_rv.pass.cpp  get_non_const.pass.cpp  get_rv.pass.cpp  tuple.by.type.pass.cpp
tuple/test/tuple.extra/: CMakeLists.txt  host_device_boundary.pass.cpp  host_device_memcpy.pass.cpp
tuple/test/tuple.general/: CMakeLists.txt  ignore.include.compile.pass.cpp  ignore.pass.cpp  tuple.smartptr.pass.cpp
tuple/test/tuple.helper/: CMakeLists.txt  tuple.include.array.pass.cpp  tuple.include.ranges.pass.cpp  tuple.include.utility.pass.cpp  tuple_element.pass.cpp  tuple_size.pass.cpp  tuple_size_incomplete.pass.cpp  tuple_size_structured_bindings.pass.cpp  tuple_size_v.pass.cpp  tuple_size_value_sfinae.pass.cpp
tuple/test/tuple.rel/: CMakeLists.txt  eq.pass.cpp  lt.pass.cpp  size_incompatible_three_way.compile.pass.cpp  three_way.pass.cpp
tuple/test/tuple.special/: CMakeLists.txt  non_member_swap.pass.cpp  non_member_swap_const.pass.cpp
tuple/test/tuple.swap/: CMakeLists.txt  member_swap.pass.cpp  member_swap_const.pass.cpp
variants/: BUILD.md  CMakeLists.txt  Kokkos_Variant.hpp  variant.hpp
variants/examples/: CMakeLists.txt  virtual_fct_port.cpp
variants/include/: Kokkos_Variant.hpp
variants/include/mpark/: .clang-format  config.hpp  in_place.hpp  lib.hpp  variant.hpp
variants/mpark/: config.hpp  in_place.hpp  lib.hpp  variant.hpp
variants/mpark_variant/include/mpark/: lib.hpp  variant.hpp
variants/test/: BUILD.md  CMakeLists.txt  assign.copy.cpp  assign.fwd.cpp  assign.move.cpp  ctor.copy.cpp  ctor.default.cpp  ctor.fwd.cpp  ctor.in_place.cpp  ctor.move.cpp  dtor.cpp  fct.ptr.cpp  get.cpp  hash.cpp  intro.cpp  issue.cpp  json.cpp  mod.cpp  relops.cpp  swap.cpp  util.hpp  virtual.cpp  visit.cpp
variants/test/mpark/: ctor.fwd.cpp  dtor.cpp  get.cpp  issue.cpp  relops.cpp  swap.cpp
variants/tests/: CMakeLists.txt  bench.cpp  fct.ptr.cpp  util.hpp  virtual.cpp
variants/tests/mpark/: assign.copy.cpp  assign.fwd.cpp  assign.move.cpp  ctor.copy.cpp  ctor.default.cpp  ctor.in_place.cpp  ctor.move.cpp  hash.cpp  intro.cpp  issue.cpp  json.cpp  mod.cpp  swap.cpp  visit.cpp
